# OOP_frog

./: .coverage  README.md  main.py  pyproject.toml
src/: classes.py  iterator_product_in_category.py  load_json_file.py
tests/: test_classes.py  test_classes_2.py  test_iterator_product_in_category.py
